# plex-jellyfin-sync

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.example.yml  docker-compose.test.yml  pyproject.toml  review.md  spec.md  status.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-approve.yml  release.yml
config/: config.example.yaml
plex_jellyfin_sync/: __init__.py  __main__.py  app.py  codex_loop.py  config.py  debounce_queue.py  diff.py  harness_bootstrap.py  jellyfin_client.py  logging_config.py  mapper.py  merge_planner.py  models.py  path_mapper.py  plex_client.py  responses_loop.py  state.py  sync_engine.py  user_data_merger.py  webhook_server.py
scripts/: auto_continue_codex.py  auto_continue_responses.py  generate_test_media.sh  smoke_test.sh
tests/: conftest.py  test_app.py  test_auto_continue_responses.py  test_codex_loop.py  test_config.py  test_debounce_queue.py  test_diff.py  test_functional_matrix_harness.py  test_harness_artifacts.py  test_harness_bootstrap.py  test_jellyfin_client.py  test_live_jellyfin.py  test_live_plex.py  test_logging_config.py  test_main.py  test_mapper.py  test_merge_planner.py  test_path_mapper.py  test_plex_client.py  test_responses_loop.py  test_smoke_harness.py  test_state.py  test_sync_engine.py  test_user_data_merger.py  test_webhook_server.py
tests/fixtures/jellyfin/: item_with_metadata.json  person_search_alice.json
tests/fixtures/plex/: collection_favorites.json  item_merged.json
tests/harness/: README.md
tests/harness/config/: config.test.example.yaml
